# bdgd2opendss

./: .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  PRODIST_MOD7_TR_MONO_15kvmax.csv  PRODIST_MOD7_TR_MONO_36.2kvmax.csv  PRODIST_MOD7_TR_TRIF_15kvmax.csv  PRODIST_MOD7_TR_TRIF_24.2kvmax.csv  Py_DSS_TOOLS.ipynb  README.md  README.rst  bdgd2dss.json  bdgd2dss_error.json  bdgd2dss_error_private.json  bdgd2dss_private.json  bdgd2opendss.py  branches.txt  pyproject.toml  requirements_py311.txt  requirements_py312.txt  requirements_py313.txt  requirements_py314.txt  run.py  setup.cfg  setup.py  test_file.py  tox.ini  verify_merge.py
.github/: ISSUE_TEMPLATE.md
bdgd2opendss/: __init__.py  bdgd2dss.json
bdgd2opendss/config/: PRODIST_MOD7_TR_MONO_24.2kvmax.csv  PRODIST_MOD7_TR_TRIF_36.2kvmax.csv  bdgd2dss.json  bdgd2dss_private.json
bdgd2opendss/core/: Core.py  JsonData.py  Settings.py  Utils.py  __init__.py
bdgd2opendss/model/: BusCoords.py  Case.py  Circuit.py  Converter.py  Count_days.py  EnergyMeters.py  KVBase.py  Line.py  LineCode.py  Load.py  LoadShape.py  PVsystem.py  RegControl.py  Transformer.py
bdgd2opendss/sample/: Sample.py
bdgd2opendss/sample/raw/aneel/Creluz-D_598_2023-12-31_V11_20240715-1111.gdb/: a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000004.spx  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a0000000b.gdbtable  a0000000c.gdbtable  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000e.gdbtable  a0000000f.gdbtable  a0000000f.gdbtablx  a00000011.gdbtable  a00000011.gdbtablx  a00000012.gdbtable  a00000013.gdbtable  a00000013.gdbtablx  a00000014.freelist  a00000014.gdbtablx  a00000015.gdbtable  a00000015.gdbtablx  a00000016.gdbtable  a00000016.gdbtablx  a00000017.gdbtable  a00000018.freelist  a00000018.gdbtable  a00000019.gdbtable  a00000019.gdbtablx  a0000001a.gdbtable  a0000001a.gdbtablx  a0000001b.gdbtable  a0000001c.gdbtablx  a0000001c.spx  a0000001d.gdbtable  a0000001e.gdbtable  a0000001e.gdbtablx  a0000001f.gdbtable  (+28 more)
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: sendi_2025.py
others/: errors_logs_generator.py
output/1_3PAS_1/: Arranjos_1_3PAS_1.dss  Cargas_BT_DO01_1_3PAS_1.dss  Cargas_BT_DO02_1_3PAS_1.dss  Cargas_BT_DO03_1_3PAS_1.dss  Cargas_BT_DO04_1_3PAS_1.dss  Cargas_BT_DO05_1_3PAS_1.dss  Cargas_BT_DO06_1_3PAS_1.dss  Cargas_BT_DO07_1_3PAS_1.dss  Cargas_BT_DO08_1_3PAS_1.dss  Cargas_BT_DO09_1_3PAS_1.dss  Cargas_BT_DO10_1_3PAS_1.dss  Cargas_BT_DO11_1_3PAS_1.dss  Cargas_BT_DO12_1_3PAS_1.dss  Cargas_BT_DU01_1_3PAS_1.dss  Cargas_BT_DU02_1_3PAS_1.dss  Cargas_BT_DU03_1_3PAS_1.dss  Cargas_BT_DU04_1_3PAS_1.dss  Cargas_BT_DU05_1_3PAS_1.dss  Cargas_BT_DU06_1_3PAS_1.dss  Cargas_BT_DU07_1_3PAS_1.dss  Cargas_BT_DU08_1_3PAS_1.dss  Cargas_BT_DU09_1_3PAS_1.dss  Cargas_BT_DU10_1_3PAS_1.dss  Cargas_BT_DU11_1_3PAS_1.dss  Cargas_BT_DU12_1_3PAS_1.dss  Cargas_BT_SA01_1_3PAS_1.dss  Cargas_BT_SA02_1_3PAS_1.dss  Cargas_BT_SA03_1_3PAS_1.dss  Cargas_BT_SA04_1_3PAS_1.dss  Cargas_BT_SA05_1_3PAS_1.dss  Cargas_BT_SA06_1_3PAS_1.dss  Cargas_BT_SA07_1_3PAS_1.dss  Cargas_BT_SA08_1_3PAS_1.dss  Cargas_BT_SA09_1_3PAS_1.dss  Cargas_BT_SA10_1_3PAS_1.dss  Cargas_BT_SA11_1_3PAS_1.dss  Cargas_BT_SA12_1_3PAS_1.dss  Cargas_IP_DO02_1_3PAS_1.dss  Cargas_IP_DO03_1_3PAS_1.dss  Cargas_IP_DO07_1_3PAS_1.dss  (+49 more)
output/AGF01I2/: Arranjos_AGF01I2.dss  Cargas_IP_DO01_AGF01I2.dss  Cargas_IP_DO02_AGF01I2.dss  Cargas_IP_DO03_AGF01I2.dss  Cargas_IP_DO04_AGF01I2.dss  Cargas_IP_DO05_AGF01I2.dss  Cargas_IP_DO06_AGF01I2.dss  Cargas_IP_DO07_AGF01I2.dss  Cargas_IP_DO08_AGF01I2.dss  Cargas_IP_DO09_AGF01I2.dss  Cargas_IP_DO10_AGF01I2.dss  Cargas_IP_DO11_AGF01I2.dss  Cargas_IP_DO12_AGF01I2.dss  Cargas_IP_DU01_AGF01I2.dss  Cargas_IP_DU02_AGF01I2.dss  Cargas_IP_DU03_AGF01I2.dss  Cargas_IP_DU04_AGF01I2.dss  Cargas_IP_DU05_AGF01I2.dss  Cargas_IP_DU06_AGF01I2.dss  Cargas_IP_DU07_AGF01I2.dss  Cargas_IP_DU08_AGF01I2.dss  Cargas_IP_DU09_AGF01I2.dss  Cargas_IP_DU10_AGF01I2.dss  Cargas_IP_DU11_AGF01I2.dss  Cargas_IP_DU12_AGF01I2.dss  Cargas_IP_SA01_AGF01I2.dss  Cargas_IP_SA02_AGF01I2.dss  Cargas_IP_SA03_AGF01I2.dss  Cargas_IP_SA04_AGF01I2.dss  Cargas_IP_SA05_AGF01I2.dss  Cargas_IP_SA06_AGF01I2.dss  Cargas_IP_SA07_AGF01I2.dss  Cargas_IP_SA08_AGF01I2.dss  Cargas_IP_SA09_AGF01I2.dss  Cargas_IP_SA10_AGF01I2.dss  Cargas_IP_SA11_AGF01I2.dss  Cargas_IP_SA12_AGF01I2.dss  Cargas_MT_DO01_AGF01I2.dss  Cargas_MT_DO02_AGF01I2.dss  Cargas_MT_DO03_AGF01I2.dss  (+80 more)
sample/: Sample.py
src/bdgd2opendss/: __init__.py
src/bdgd2opendss/config/: bdgd2dss.json  bdgd2dss_error.json  bdgd2dss_error_private.json  paths.py
src/bdgd2opendss/core/: Core.py  JsonData.py  Settings.py  Utils.py
src/bdgd2opendss/model/: BusCoords.py  Capacitor.py  Case.py  Circuit.py  Converter.py  Count_days.py  Line.py  LineCode.py  Load.py  LoadShape.py  PVsystem.py  Transformer.py  validador_bdgd.py
tests/: __init__.py  conftest.py  test_bdgd_tools.py  test_core_api.py  test_csv_outputs.py  test_run.py  test_validador_bdgd.py  test_validador_etapa17_integration.py  test_validador_scan_integration.py  test_validador_scan_types.py
tests/data/: bdgd_sample_paths.py  broken_bdgd_etapa17_manifest.yml  broken_bdgd_scan_manifest.yml  create_broken_bdgd.py  scan_manifest_utils.py  validation_helpers.py
tests/data/expected_csv_files/1_3PAS_1/: AuxCargaBTNT_1_3PAS_1.csv  AuxCargaBT_1_3PAS_1.csv  AuxCargaMTNT_1_3PAS_1.csv  AuxCargaMT_1_3PAS_1.csv  CircMT_1_3PAS_1.csv  contagem_dias_1_3PAS_1.csv
